--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -5,7 +5,7 @@ COPY package.json .
 RUN bun install --only=prod
 COPY . .
 
-RUN mkdir -p /app/.next && chmod -R 777 /ap
+RUN mkdir -p /app/.next && chmod -R 777 /app
 
 # Create a non-root user and switch
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
