--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,14 +1,14 @@
-FROM oven/bun:canary-alpine
+FROM node:lts-alpine
 
 WORKDIR /app
-COPY package.json .
-RUN bun install --only=prod
+
+COPY package.json ./
+
+RUN npm install --only=production
+
 COPY . .
 
-RUN mkdir -p /app/.next && chmod -R 777 /app
-
-# Create a non-root user and switch
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 USER appuser
 
-CMD ["bun", "dev"]
+CMD ["npm", "run", "dev"]
