--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,14 +1,11 @@
-FROM node:lts-alpine
+FROM oven/bun:canary-alpine
 
 WORKDIR /app
-
-COPY package.json ./
-
-RUN npm install --only=production
-
+COPY package.json .
+RUN bun install --only=prod
 COPY . .
 
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 USER appuser
 
-CMD ["npm", "run", "dev"]
+CMD ["bun", "dev"]
