--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -5,6 +5,8 @@ COPY package.json .
 RUN bun install --only=prod
 COPY . .
 
+RUN mkdir -p /app/.next && chmod -R 777 /app
+
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 USER appuser
 
